<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_pop_open_check_ins"
        android:title="@string/checkin_header"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/menu_pop_open_medicines"
        android:title="@string/medicines_header"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/menu_pop_call_patient"
        android:title="@string/call_other_user_header"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/menu_pop_send_email_patient"
        android:title="@string/send_email_other_user_header"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
</menu>