<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    >
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/description_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />
    <item android:id="@+id/action_test"
        android:title="@string/action_accept_checkin"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"
        />
</menu>
