<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_custom_new_medication_dialog"
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Login Error Message -->
    <LinearLayout
        android:id="@+id/layout_medication_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:textSize="18sp"
            android:id="@+id/txt_medication_error"
            android:text="@string/txt_error_medication_exists"
            android:layout_gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#ffff000a"
            style="@style/Theme.Capstone"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/new_medication_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <EditText android:id="@+id/txt_new_medication"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_medication"
                android:imeActionId="@+id/new_medication"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                style="@style/ActionBar.Transparent.Capstone"
                android:text="Cancel"

                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSet"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                style="@style/ActionBar.Transparent.Capstone"
                android:text="OK"

                android:textStyle="bold" />
        </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>